Adjust layout and code. Remove scripted and improve cross compatibility for SBT 0.11, 0.12, 0.13