@@ -13,10 +13,6 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-// PRODUCTION CONFIGURATION
-
-ScriptedPlugin.scriptedSettings
-
 name := "sbt-dependency-manager"
 
 organization := "org.digimead"
@@ -28,9 +24,5 @@ scalacOptions ++= Seq("-unchecked", "-deprecation", "-Xcheckinit", "-Xfatal-warn
 javacOptions ++= Seq("-source", "1.6", "-target", "1.6")
 
 sbtPlugin := true
-
-scriptedBufferLog := false
-
-scriptedLaunchOpts := Seq("-Xms512m", "-Xmx512m", "-XX:MaxPermSize=256m")
 
 //logLevel := Level.Debug
